<resources>
    <string name="app_name">AlibabaCloud Push Demo</string>
    <string name="title_basic">Basic Functions</string>
    <string name="title_advance">Advanced Functions</string>
    <string name="title_info">Information</string>

    <string name="open_push">Open Push</string>
    <string name="close_push">Close Push</string>
    <string name="set_log_level">Set Log Level</string>
    <string name="push_status">Push Channel Status</string>
    <string name="off_log">Turn off Log</string>
    <string name="confirm">Confirm</string>
    <string name="use_service">Use Service to receive push</string>
    <string name="show_notification_in_group">Show Notification in Group</string>
    <string name="clear_notification">Clear all notifications created by Push SDK</string>
    <string name="device_id">Device ID</string>
    <string name="sdk_version">Push SDK Version</string>
    <string name="push_register">Push Register</string>
    <string name="register_success">Register push successfully</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="tips">Tips</string>
    <string name="common_error">Failed to %s, errorMessage: %s</string>
    <string name="push_channel_has_closed">Close push channel successfully</string>
    <string name="push_channel_has_opened">Open push channel successfully</string>
    <string name="device_tag">Device Tags</string>
    <string name="account_tag">Account Tags</string>
    <string name="alias_tag">Alias Tags</string>
    <string name="add_tag">Add Tag</string>
    <string name="add_device_tag">Add device tag</string>
    <string name="add_account_tag">Add account tag</string>
    <string name="add_alias_tag">Add alias tag</string>
    <string name="remove_tag">Remove Tag</string>
    <string name="tag_hint">Please input a new tag</string>
    <string name="tag_is_empty">Can not add tag because the input is empty</string>
    <string name="config_alias">Alias</string>
    <string name="add_alias">Add Alias</string>
    <string name="remove_alias">Remove Alias</string>
    <string name="alis_hint">Please input a new alias</string>
    <string name="alis_is_empty">Can not add alis because the input is empty</string>
    <string name="sms_notify">SMS Notification</string>
    <string name="bind_phone">Bind Phone Number</string>
    <string name="unbind_phone">Unbind Phone Number</string>
    <string name="phone_empty">Can not bind phone number because the input is empty</string>
    <string name="phone_hint">Please input phone number</string>
    <string name="config_account">Account</string>
    <string name="bind_account">Bind Account</string>
    <string name="unbind_account">Unbind Account</string>
    <string name="account_empty">Can not bind account because the input is empty</string>
    <string name="account_hint">Please input account</string>
    <string name="choose_alias">Choose Alias</string>
    <string name="network_not_connect">Network has issues, please check the network</string>
    <string name="add_alias_first">Please add an alias first</string>
    <string name="third_push_init">Init Third Push</string>
    <string name="open_notification_permission">Please open notification permission</string>
    <string name="message_title">Title: %s</string>
    <string name="message_content">Content: %s</string>
    <string name="message_msgId">MsgId: %s</string>
    <string name="message_list">Push Message List</string>
    <string name="splash_welcome">Welcome to Alibaba Cloud Push Demo</string>
</resources>