<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_basic">

    <fragment
        android:id="@+id/navigation_basic"
        android:name="com.alibaba.ams.emas.demo.ui.basic.BasicFragment"
        android:label="@string/title_basic"
        tools:layout="@layout/fragment_basic" />

    <fragment
        android:id="@+id/navigation_advance"
        android:name="com.alibaba.ams.emas.demo.ui.advance.AdvanceFragment"
        android:label="@string/title_advance"
        tools:layout="@layout/fragment_advance" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.alibaba.ams.emas.demo.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>