<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.alibaba.ams.emas.demo.ui.basic.BasicViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.basic.BasicFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/basic_scroll_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="@dimen/content_max_width_percent">

                <LinearLayout
                    android:id="@+id/basic_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/basic_push_register"
                        style="@style/Widget.PushDemo.Settings.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.registerPush()}"
                        android:text="@string/push_register"
                        android:drawableEnd="@drawable/ic_arrow_right"
                        android:textSize="16dp" />


                    <TextView
                        android:id="@+id/basic_open_push"
                        style="@style/Widget.PushDemo.Settings.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.openPush()}"
                        android:text="@string/open_push"
                        android:drawableEnd="@drawable/ic_arrow_right"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/basic_close_push"
                        style="@style/Widget.PushDemo.Settings.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.closePush()}"
                        android:text="@string/close_push"
                        android:drawableEnd="@drawable/ic_arrow_right"
                        android:textSize="16dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:padding="12dp"
                        android:onClick="@{() -> viewModel.setLogLevel()}"
                        >

                        <TextView
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/set_log_level"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/info_timeout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:padding="5dp"
                            android:text="@{String.valueOf(viewModel.logLevel)}"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            tools:text="DEBUG" />

                    </RelativeLayout>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/basic_show_notify_in_group"
                        style="@style/Widget.PushDemo.Settings.Switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.showInGroup}"
                        android:onCheckedChanged="@{viewModel::toggleShowInGroup}"
                        android:text="@string/show_notification_in_group"
                        android:textSize="16dp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/basic_use_service"
                        style="@style/Widget.PushDemo.Settings.Switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.useService}"
                        android:onCheckedChanged="@{viewModel::toggleUseService}"
                        android:text="@string/use_service"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/basic_clear_notifications"
                        style="@style/Widget.PushDemo.Settings.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.clearNotifications()}"
                        android:text="@string/clear_notification"
                        android:drawableEnd="@drawable/ic_arrow_right"
                        android:textSize="16dp" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>